version 0.6cvs

- Removed glib dependencies.  Will use glib only if available
- Configure time option --with-struct-callbacks to use a callback struct
instead of callback functions (see yahoo2_callbacks.h and the README)
- Code cleanups by Steve McAndrewSmith

- sample console client no longer requires gtk!

22-7-2002: version 0.5

- Added basic documentation to README
- Several minor code fixes and cleanups

20-7-2002: version 0.5.cvs

This is an initial public release as a separate library
I'll put a feature list in later.
0.5 is just a random version number, I figure it's got half the features
of where it should be when complete.