@@ -1,5 +1,3 @@
-Getting Identities
-Changing Identities
 Address Book support
 Changing user profiles
 Voice Chat
